<resources>
    <string name="app_name">BudayaIndonesia</string>
    <string name="title_bahasa">Bahasa</string>
    <string name="title_makanan">Makanan</string>
    <string name="title_lagu">Lagu</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="data_bahasa">Data Bahasa Daerah</string>
    <string name="data_makanan">Data Makanan Daerah</string>
    <string name="data_lagu">Data Lagu Daerah</string>
    <string name="setting">Setting</string>
    <string name="sub_judul_lagu">Klik card untuk melihat detail</string>
</resources>