<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.budayaindonesia.ui.bahasa.BahasaFragment"
        android:label="@string/title_bahasa"
        tools:layout="@layout/fragment_bahasa" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.budayaindonesia.ui.makanan.MakananFragment"
        android:label="@string/title_makanan"
        tools:layout="@layout/fragment_makanan" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.budayaindonesia.ui.lagu.LaguFragment"
        android:label="@string/title_lagu"
        tools:layout="@layout/fragment_lagu" />
</navigation>